[gd_scene load_steps=4 format=3 uid="uid://c133ihl68ix4v"]

[ext_resource type="Script" path="res://Scripts/Weapons/wand_attack.gd" id="1_kjic8"]
[ext_resource type="Texture2D" uid="uid://db7i5xqs24j1r" path="res://Art/Weapons/Magic Ball.png" id="2_xa66n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lskcv"]
radius = 8.0

[node name="Wand_Attack" type="Area2D" groups=["player_hitbox"]]
collision_layer = 4
collision_mask = 34
script = ExtResource("1_kjic8")
damage = 2
startup_time = 0.67

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="Detector" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lskcv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(-3, 3)
texture = ExtResource("2_xa66n")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
